tests/paczka1/small_fuzzy/17150574.err
Error in line 3: isbcF4gfqN A270 51,3
Error in line 7: Gly S759 99,2
Error in line 10: Gly A270 2,9
